Fix z-index issue

--- a/media/less/style/chat/rooms.less
+++ b/media/less/style/chat/rooms.less
@@ -38,7 +38,7 @@
     border-bottom: 1px #ddd solid;
     position: relative;
     box-shadow: 0 4px 5px -5px rgba(0, 0, 0, .1);
-    z-index: 1000;
+    z-index: 1;
     .flex-display;
     .flex-direction(row);
 }
